test/error/sema/nullable-must-be-unwrapped.dsk
let S = struct
    x: int
end

let s: ?S = null
echo(s.x)
